# chatgpt-connector-bigquery

./: .env.example  .gitignore  .pre-commit-config.yaml  CHATGPT_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-synchronized.yml
src/mcp_server_bigquery/: __init__.py  http_server.py  server.py
